# pymdma

./: .env  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  Dockerfile  Gemfile  Makefile  Makefile.include  README.md  _config.yml  cookiecutter-config-file.yml  environment.yml  index.md  mkdocs.yml  outline.md  poetry.toml  presenters.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
_includes/: image.html
_layouts/: custom.html
data/test/image/input_val/annotations/: COCO_annotation_example_bb_exp.json  COCO_annotation_example_mask_exp.json
data/test/tabular/synthesis_val/dataset/: dummy_syn_tab.json
data/test/tabular/synthesis_val/reference/: dummy_ref_tab.json
data/test/text/input_val/dataset/: dataset.jsonl
data/test/time_series/input_val/dataset/g10/: HR09000.hea  HR09001.hea
data/test/time_series/input_val/reference/g10/: HR09000.mat  HR09003.hea
data/test/time_series/synthesis_val/dataset/g1/: HR00001.hea  HR00002.hea  HR00004.hea
data/test/time_series/synthesis_val/reference/g1/: HR00003.hea
data/test/time_series/synthesis_val/reference/g10/: HR09001.mat  HR09002.hea  HR09002.mat  HR09003.mat  HR09004.hea  HR09004.mat
data/test/time_series/synthesis_val/reference/g11/: HR10000.hea  HR10000.mat  HR10001.hea  HR10001.mat  HR10002.hea  HR10002.mat  HR10003.hea  HR10003.mat
data/test/time_series/synthesis_val/reference/g12/: HR11000.hea  HR11000.mat  HR11001.hea  HR11001.mat  HR11002.hea  HR11002.mat  HR11003.hea  HR11003.mat  HR11004.hea  HR11004.mat
data/test/time_series/synthesis_val/reference/g13/: HR12000.hea  HR12000.mat  HR12001.hea  HR12001.mat  HR12002.hea  HR12002.mat  HR12003.hea  HR12003.mat  HR12004.hea  HR12004.mat
docs/: LOADING_ENV_VARIABLES.md  SECURITY.md  data_auditing.drawio  developer.md  generate_api_reference.py  implement_metrics.md  index.md  installation.md  tutorials.md
docs/guides/: image_guides.md  practical_examples.md
docs/image/: annotation.md  input_val.md  synth_val.md
docs/performance/: image.md
docs/tabular/: input_val.md  synth_val.md
docs/time_series/: input_val.md  synth_val.md
notebooks/: README.md  image_examples.ipynb  tabular_examples.ipynb  time_series_examples.ipynb
requirements/: requirements-dev.txt  requirements-image.txt  requirements-notebook.txt  requirements-prod.txt  requirements-tabular.txt  requirements-text.txt  requirements-time_series.txt  requirements.txt
scripts/: eval_retina.sh  image_metrics.sh  tabular_metrics.sh  text_metrics.sh  time_series_metrics.sh
src/pymdma/: cli.py  config.py  constants.py
src/pymdma/api/: api_types.py  example_repr.py  hooks.py  run_api.py
src/pymdma/common/: compute.py  definitions.py  output.py  selection.py  settings.py  viz.py
src/pymdma/general/functional/: distance.py  knn.py  ratio.py
src/pymdma/general/measures/: prd.py  prdc.py
src/pymdma/general/models/: kernels.py
src/pymdma/general/utils/: util.py
src/pymdma/image/: input_layer.py
src/pymdma/image/data/: __init__.py  parsers.py  simple_dataset.py
src/pymdma/image/measures/input_val/: __init__.py
src/pymdma/image/measures/input_val/annotation/: coco.py
src/pymdma/image/measures/input_val/data/: dom.py  no_reference.py  psnr.py  reference.py  ssim.py
src/pymdma/image/measures/input_val/quality/: no_reference.py  reference.py
src/pymdma/image/measures/synthesis_val/: __init__.py
src/pymdma/image/measures/synthesis_val/feature/: _shared.py  giqa.py
src/pymdma/image/models/: extractor.py  features.py  imagenet.py
src/pymdma/image/utils/: processing.py
src/pymdma/tabular/: input_layer.py
src/pymdma/tabular/data/: harmonize.py  load.py  utils.py
src/pymdma/tabular/embeddings/: __init__.py  embed.py  impute.py  scale.py  utils.py
src/pymdma/tabular/measures/: utils_inp.py  utils_syn.py
src/pymdma/tabular/measures/input_val/: __init__.py  privacy.py  quality.py
src/pymdma/tabular/measures/input_val/data/: privacy.py  quality.py
src/pymdma/tabular/measures/synthesis_val/: __init__.py
src/pymdma/tabular/measures/synthesis_val/data/: similarity.py  utility.py
src/pymdma/tabular/measures/synthesis_val/feature/: _shared.py  privacy.py
src/pymdma/tabular/models/: classification.py  regression.py
src/pymdma/text/: api_anonimization.py  inference.py  input_layer.py  model_inference.py
src/pymdma/text/data/: text_dataset.py
src/pymdma/text/data/ner/: dataloaders.py  preprocess.py
src/pymdma/text/measures/input_val/: __init__.py  privacy.py
src/pymdma/text/utils/: anonymization_utils.py  read_save_utils.py  text_processing.py  util.py
src/pymdma/time_series/: input_layer.py
src/pymdma/time_series/data/: simple_dataset.py
src/pymdma/time_series/measures/input_val/: __init__.py  quality.py
src/pymdma/time_series/measures/input_val/data/: quality.py
src/pymdma/time_series/measures/synthesis_val/: __init__.py
src/pymdma/time_series/measures/synthesis_val/data/: freq_sim.py  reference.py
src/pymdma/time_series/measures/synthesis_val/feature/: _shared.py  distance.py
src/pymdma/time_series/models/: __init__.py  extractor.py  features.py  tsfel.py
src/pymdma/time_series/utils/: extract_features.py
tests/: __init__.py  _utils.py  conftest.py  test_api_general.py  test_dataset_audit.py  test_image_import.py  test_tabular_metrics.py  test_ts_import.py
tools/: export_requirements.py
